gcc/testsuite/rust/rustc/ui/sync/suggest-once-cell.rs
fn require_sync<T: Sync>() {}
// { dg-note "" "" { target *-*-* } .-1 }
// { dg-note "" "" { target *-*-* } .-2 }

fn main() {
    require_sync::<std::cell::OnceCell<()>>();
// { dg-error ".E0277." "" { target *-*-* } .-1 }
// { dg-note ".E0277." "" { target *-*-* } .-2 }
// { dg-note ".E0277." "" { target *-*-* } .-3 }
}

